2003-09-23  JP Rosevear <jpr@ximian.com>

	* cal-client/cal-client.h: remove dead proto

2003-09-23  JP Rosevear <jpr@ximian.com>

	* cal-client/cal-client.h: remove send result enum

	* gui/itip-utils.c (comp_server_send): use the new send_objects
	routine

2003-09-23  JP Rosevear <jpr@ximian.com>

	* cal-client/cal-client.h: remove send result enum

2003-09-23  JP Rosevear <jpr@ximian.com>

	* cal-client/cal-client.h: remove enum, protos

	* cal-client/cal-client.c: remove remove status enum typing

2003-09-23  Rodrigo Moya <rodrigo@ximian.com>

	* importers/icalendar-importer.c (update_objects): new function
	to manage the update of components, taking into account
	VTIMEZONE components.
	(process_item_fn, gnome_calendar_import_data_fn): use
	update_objects instead of cal_client_update_objects.

2003-09-23  JP Rosevear <jpr@ximian.com>

	* pcs/cal.h: update proto

	* pcs/cal.c (impl_Cal_addTimezone): just call add_timezone, it
	does the notification
	(cal_notify_object_created): only notify the query if the object
	matches
	(cal_notify_object_removed): ditto

	* pcs/cal-backend.h: update proto, vmethod

	* pcs/cal-backend.c (cal_backend_add_timezone): returns void

	* pcs/cal-backend-sync.h: update proto, vmethod

	* pcs/cal-backend-sync.c (cal_backend_sync_remove_object): add the
	object as an out param
	(_cal_backend_remove_object): get the object and pass it in the
	notification

	* pcs/cal-backend-file.c (cal_backend_file_create_object): kill
	cal_backend_file_update_objects call, its more efficient to create
	the comp ourselves; stamp the creation time, add the component to
	the toplevel
	(cal_backend_file_modify_object): kill the
	cal_backend_file_update_objects call, add the component to the
	toplevel
	(cal_backend_file_remove_object): pass back the object when
	removing

2003-09-23  JP Rosevear  <jpr@ximian.com>

	* cal-client/cal-query.c (cal_query_finalize): disconnect the
	signal handlers

	* cal-client/cal-client.c (cal_client_get_query): unref the